--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rent-hub",
+  "name": "online-publishing",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -10,13 +10,17 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^19.2.15",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
     "@angular/forms": "^19.2.0",
+    "@angular/material": "^19.2.15",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "ngx-quill": "^27.0.2",
+    "quill": "^2.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
