--- a/angular.json
+++ b/angular.json
@@ -18,6 +18,7 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist/online-publishing",
+            "baseHref": "/online-publishing-platform/",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
